objects/Department_Costs__c.object
<CustomObject>
    <fields>
        <fullName>Costs__c</fullName>
        <label>Costs</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Department</label>
        <referenceTo>Department__c</referenceTo>
        <relationshipLabel>Department Costs</relationshipLabel>
        <relationshipName>Department_Costs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Financials__c</fullName>
        <label>Financials</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Actual</fullName>
                </value>
                <value>
                    <fullName>Forecast</fullName>
                </value>
                <value>
                    <fullName>Budget</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GAAP_Class__c</fullName>
        <label>GAAP Class</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cost of Revenue</fullName>
                </value>
                <value>
                    <fullName>General &amp; Administrative</fullName>
                </value>
                <value>
                    <fullName>Research &amp; Development</fullName>
                </value>
                <value>
                    <fullName>Sales &amp; Marketing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Current Employee Cost</fullName>
                </value>
                <value>
                    <fullName>Strategic Hires</fullName>
                </value>
                <value>
                    <fullName>Budgeted Cost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <description>Object to house Forecasted and Budgeted Departmental Costs.</description>
    <label>Department Costs</label>
    <nameField>
        <displayFormat>DC-{00000}</displayFormat>
        <label>Department Costs Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Department Costs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GAAP_Class__c</field>
            <operation>equals</operation>
            <value>Cost of Revenue</value>
        </filters>
        <filters>
            <field>Date__c</field>
            <operation>equals</operation>
            <value>7/31/2018</value>
        </filters>
        <label>All</label>
    </listViews>
</CustomObject>